welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:5: error: not found: value eg
		if( eg(a,b)){
                    ^greenTicket:8: error: not found: value eg
		if( eg(b,c)){
                    ^greenTicket:11: error: not found: value eg
		if( eg(b,c)){
                    ^