welcome.lessons.welcome.bat.bool2.GreenTicket.scala.code
def greenTicket(a:Int, b:Int, c:Int):Int = {
	if (eg3(a,b,c)){
		return 20;
	}else{
		if( eg(a,b)){
			return 10;
		}
		if( eg(b,c)){
			return 10;
		}
		if( eg(b,c)){
			return 10;
		}else{
			return 0;
		}
	}
}



def eg2(d:Int, e:Int):Boolean = {
	if((d-e)==0){
		return true;
	}else{
		return false;
	}
}

def eg3(f:Int, g:Int, h:Int):Boolean ={
	if( eg2(f,g) && eg2(g,h) && eg2(f,h)){
		return true;
	}else{
		return false;
	}
}
